// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-fsGxdb {
    border-bottom: 1px solid var(--colors-grey200);
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP {
    border-bottom: 1px solid var(--colors-grey200);
    box-sizing: border-box;
    color: var(--colors-grey800);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP:first-child {
    font-weight: 600;
  }
}

@media  {
  .c-cwQMhQ-jJvmHK-size-md .c-hegdBP,
  .c-cwQMhQ-jJvmHK-size-md .c-fsGxdb,
  .c-cwQMhQ-jJvmHK-size-md .c-egnNtq {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-fsGxdb:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-fsGxdb:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-hjAYDb:last-child .c-hegdBP:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-hjAYDb:last-child .c-hegdBP:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-elvcev-theme-primaryDark .c-fsGxdb {
    background: var(--colors-primary1000);
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-grey100);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-jJvmHK-size-md c-cwQMhQ-dBwSxC-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-elvcev-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-fsGxdb"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-duISxx-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with a themed header 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-fsGxdb {
    border-bottom: 1px solid var(--colors-grey200);
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP {
    border-bottom: 1px solid var(--colors-grey200);
    box-sizing: border-box;
    color: var(--colors-grey800);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP:first-child {
    font-weight: 600;
  }
}

@media  {
  .c-cwQMhQ-jJvmHK-size-md .c-hegdBP,
  .c-cwQMhQ-jJvmHK-size-md .c-fsGxdb,
  .c-cwQMhQ-jJvmHK-size-md .c-egnNtq {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-fsGxdb:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-fsGxdb:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-hjAYDb:last-child .c-hegdBP:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-hjAYDb:last-child .c-hegdBP:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-elvcev-theme-primaryDark .c-fsGxdb {
    background: var(--colors-primary1000);
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-grey100);
  }

  .c-cwQMhQ-fAYKVU-size-lg .c-hegdBP,
  .c-cwQMhQ-fAYKVU-size-lg .c-fsGxdb,
  .c-cwQMhQ-fAYKVU-size-lg .c-egnNtq {
    height: var(--sizes-5);
    padding: var(--space-2) var(--space-3);
  }

  .c-PJLV-bwYtDi-theme-primary .c-fsGxdb {
    background: var(--colors-primary800);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-jJvmHK-size-md c-cwQMhQ-dBwSxC-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-bwYtDi-theme-primary"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-fsGxdb"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-duISxx-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with size set to lg 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-fsGxdb {
    border-bottom: 1px solid var(--colors-grey200);
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP {
    border-bottom: 1px solid var(--colors-grey200);
    box-sizing: border-box;
    color: var(--colors-grey800);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP:first-child {
    font-weight: 600;
  }
}

@media  {
  .c-cwQMhQ-jJvmHK-size-md .c-hegdBP,
  .c-cwQMhQ-jJvmHK-size-md .c-fsGxdb,
  .c-cwQMhQ-jJvmHK-size-md .c-egnNtq {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-fsGxdb:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-fsGxdb:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-hjAYDb:last-child .c-hegdBP:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-hjAYDb:last-child .c-hegdBP:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-elvcev-theme-primaryDark .c-fsGxdb {
    background: var(--colors-primary1000);
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-grey100);
  }

  .c-cwQMhQ-fAYKVU-size-lg .c-hegdBP,
  .c-cwQMhQ-fAYKVU-size-lg .c-fsGxdb,
  .c-cwQMhQ-fAYKVU-size-lg .c-egnNtq {
    height: var(--sizes-5);
    padding: var(--space-2) var(--space-3);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-fAYKVU-size-lg c-cwQMhQ-dBwSxC-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-elvcev-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-fsGxdb"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-duISxx-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with square corners 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-fsGxdb {
    border-bottom: 1px solid var(--colors-grey200);
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP {
    border-bottom: 1px solid var(--colors-grey200);
    box-sizing: border-box;
    color: var(--colors-grey800);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP:first-child {
    font-weight: 600;
  }
}

@media  {
  .c-cwQMhQ-jJvmHK-size-md .c-hegdBP,
  .c-cwQMhQ-jJvmHK-size-md .c-fsGxdb,
  .c-cwQMhQ-jJvmHK-size-md .c-egnNtq {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-fsGxdb:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-fsGxdb:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-hjAYDb:last-child .c-hegdBP:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-hjAYDb:last-child .c-hegdBP:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-elvcev-theme-primaryDark .c-fsGxdb {
    background: var(--colors-primary1000);
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-grey100);
  }

  .c-cwQMhQ-fAYKVU-size-lg .c-hegdBP,
  .c-cwQMhQ-fAYKVU-size-lg .c-fsGxdb,
  .c-cwQMhQ-fAYKVU-size-lg .c-egnNtq {
    height: var(--sizes-5);
    padding: var(--space-2) var(--space-3);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-jJvmHK-size-md c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-elvcev-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-fsGxdb"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-duISxx-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-hegdBP"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with sticky columns 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-fsGxdb {
    border-bottom: 1px solid var(--colors-grey200);
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP {
    border-bottom: 1px solid var(--colors-grey200);
    box-sizing: border-box;
    color: var(--colors-grey800);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-hegdBP:first-child {
    font-weight: 600;
  }
}

@media  {
  .c-cwQMhQ-jJvmHK-size-md .c-hegdBP,
  .c-cwQMhQ-jJvmHK-size-md .c-fsGxdb,
  .c-cwQMhQ-jJvmHK-size-md .c-egnNtq {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-fsGxdb:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-fsGxdb:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-hjAYDb:last-child .c-hegdBP:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-dBwSxC-corners-round .c-hjAYDb:last-child .c-hegdBP:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-elvcev-theme-primaryDark .c-fsGxdb {
    background: var(--colors-primary1000);
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-duISxx-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-grey100);
  }

  .c-cwQMhQ-fAYKVU-size-lg .c-hegdBP,
  .c-cwQMhQ-fAYKVU-size-lg .c-fsGxdb,
  .c-cwQMhQ-fAYKVU-size-lg .c-egnNtq {
    height: var(--sizes-5);
    padding: var(--space-2) var(--space-3);
  }

  .c-PJLV-bwYtDi-theme-primary .c-fsGxdb {
    background: var(--colors-primary800);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }

  .c-PJLV-iiXkAWq-css {
    overflow: auto;
    max-width: 100%;
  }

  .c-PJLV-iiXkAWq-css td {
    background: inherit;
  }

  .c-cwQMhQ-idVpojG-css {
    height: 100px;
    width: 300px;
  }

  .c-PJLV-igbAmsf-css {
    overflow: auto;
    max-width: 100%;
  }

  .c-PJLV-igbAmsf-css td:nth-of-type(1),
  .c-PJLV-igbAmsf-css th:nth-of-type(1) {
    position: sticky;
    left: 0px;
    min-width: 0px;
    z-index: 2;
  }

  .c-PJLV-igbAmsf-css td {
    background: inherit;
  }
}

<div>
  <div
    class="c-PJLV c-PJLV-igbAmsf-css"
    role="scrollbar"
  >
    <table
      class="c-cwQMhQ c-cwQMhQ-jJvmHK-size-md c-cwQMhQ-dBwSxC-corners-round c-cwQMhQ-idVpojG-css"
    >
      <thead
        class="c-PJLV c-PJLV-elvcev-theme-primaryDark"
        numberofstickycolumns="1"
      >
        <tr
          class="c-hjAYDb"
        >
          <th
            class="c-fsGxdb"
          >
            Column A
          </th>
          <th
            class="c-fsGxdb"
          >
            Column B
          </th>
          <th
            class="c-fsGxdb"
          >
            Column C
          </th>
        </tr>
      </thead>
      <tbody
        class="c-PJLV c-PJLV-duISxx-striped-true"
        numberofstickycolumns="1"
      >
        <tr
          class="c-hjAYDb"
        >
          <td
            class="c-hegdBP"
          >
            This is text
          </td>
          <td
            class="c-hegdBP"
          >
            This is text
          </td>
          <td
            class="c-hegdBP"
          >
            This is text
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
